[gd_scene load_steps=6 format=3 uid="uid://2q4iqq7p45ns"]

[ext_resource type="Script" path="res://menu/transition.gd" id="1_fdy18"]

[sub_resource type="Animation" id="Animation_bfbq0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kiebk"]
resource_name = "hide"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cro3h"]
resource_name = "show"
length = 0.25
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s5whh"]
_data = {
"RESET": SubResource("Animation_bfbq0"),
"hide": SubResource("Animation_kiebk"),
"show": SubResource("Animation_cro3h")
}

[node name="transition" type="CanvasLayer"]
process_mode = 3
layer = 99
script = ExtResource("1_fdy18")

[node name="main" type="Control" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background" type="ColorRect" parent="main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25, 0.25, 0.25, 1)

[node name="vertical" type="VBoxContainer" parent="main"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="text" type="Label" parent="main/vertical"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="return_to_menu" type="Button" parent="main/vertical"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Return to Menu"

[node name="animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../main")
libraries = {
"": SubResource("AnimationLibrary_s5whh")
}

[connection signal="pressed" from="main/vertical/return_to_menu" to="." method="_return_to_menu"]
[connection signal="animation_finished" from="animation" to="." method="_anim_finished"]
